2004-10-26  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/tkWinRegion.c (TkpBuildRegionFromAlphaData): Fixed syntax error
	* generic/tkImgPhoto.c (Tk_PhotoPutBlock): Removed unreferences vars.
	

2004-10-26  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* macosx/tkMacOSXRegion.c (TkpBuildRegionFromAlphaData):
	* win/tkWinRegion.c (TkpBuildRegionFromAlphaData): Factor out the
	* unix/tkUnix.c (TkpBuildRegionFromAlphaData):	   building of region
	* generic/tkImgPhoto.c (Tk_PhotoPutBlock):	   data to permit
	better implementations on particular platforms. [Bug 919066]

2004-10-24  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	TIP#177 AND TIP#179 IMPLEMENTATIONS

	* doc/panedwindow.n: Docs for -hide and -stretch options.
	* tests/panedwindow.test: Basic tests of -hide and -stretch options.
	* generic/tkPanedWindow.c (Slave,slaveOptionSpecs,ComputeGeometry):
	(DisplayPanedWindow,ArrangePanes,MoveSash,PanedWindowIdentifyCoords):
	Add hide flag and stretch setting to list of options supported on
	a panedwindow's slaves. [Patch 983886]  Much thanks to Brian Griffin
	for these options.

2004-10-20  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tkWinWm.c (UpdateWrapper): pass SWP_NOOWNERZORDER to
	SetWindowPos when maintaining win Z order, to prevent parent
	from flashing (adjusting Z order).

2004-10-19  Joe English  <jenglish@users.sourceforge.net>

	TIP#204 IMPLEMENTATION

	* library/tk.tcl, library/entry.tcl, library/spinbox.tcl:
	TIP #204 "Virtual Events for Keyboard Traversal" (patch #976928)

2004-10-19  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* tests/canvPsImg.tcl, tests/canvPsBmap.tcl: 
	* generic/tkBitmap.c, bitmaps/*.bmp:
	* library/demos/icon.tcl, library/demos/items.tcl: 
	* library/demos/label.tcl, library/demos/menu.tcl: 
	* library/demos/ruler.tcl, library/demos/twind.tcl: 
	* library/demos/images/*.bmp: Renamed all X bitmap files files to
	have an .xbm extension so Windows users won't get confused when